Fix leading pane placement on smaller screens

--- a/lxl-web/src/app.css
+++ b/lxl-web/src/app.css
@@ -58,7 +58,7 @@
 	--font-fallback: ui-sans-serif, system-ui, sans-serif;
 	--color-success: #2ab061;
 
-	--app-bar-height: 56px;
+	--app-bar-height: 108px;
 	--toolbar-height: 48px;
 	--search-input-height: 44px;
 	--banner-height: 36px;
